# llm_worktask_evaluation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: epoch_analysis_clean.py  fig_tables_materials_tools.py  fig_tables_overall_results.py
data/filtered_tasks/: business_and_financial_operations_occupations_CORE.csv  computer_and_mathematical_occupations_CORE.csv  management_occupations_CORE.csv
data/required_materials_tools/claude-3-7-sonnet-20250219/: materials_tools_business_and_financial_operations_occupations_CORE.csv  materials_tools_computer_and_mathematical_occupations_CORE.csv
data/task_lists/: business_and_financial_operations_occupations.csv  business_and_financial_operations_occupations_CORE.csv  computer_and_mathematical_occupations.csv  computer_and_mathematical_occupations_CORE.csv  management_occupations.csv  management_occupations_CORE.csv
docs/: mkdocs.yml
docs/docs/: index.md
pipeline/: filter_tasks_occupation_group.py  filter_tasks_tools_materials.py  generate_exam.py  query_agents.py  required_materials_tools.py  take_test.py
prompts/exam_generation_prompts/: prompt_evaluation.txt  prompt_grading.txt  prompt_instructions.txt  prompt_materials.txt  prompt_overview.txt  prompt_submission.txt  system_prompt.txt
prompts/materials_tools/: system_prompt.txt  user_prompt.txt
prompts/sanity_check_prompts/: prompt_fake_images.txt  prompt_fake_websites.txt  prompt_makes_sense_system.txt  prompt_makes_sense_user.txt
results/tables/claude-3-7-sonnet-20250219/: claude-3-7-sonnet-20250219_exams_overview.tex  (+1 more)
